# tetra

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  PLAN.md  PROJECT_OUTLINE.md  README.md  TEST_FAILURES.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_simulator.txt  run_premarket.sh
airflow/dags/: data_pipeline_dag.py
alembic/: env.py
backend/: .env.example  README.md  requirements.txt  run.sh
backend/app/: config.py  (+1 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: __init__.py  analysis_config.yaml  config.py  hostmap.txt  sources.json
docker/: Dockerfile
docs/: ASSESSMENT_PIPELINE.md  BENCHMARK_PIPELINE.md  DATA_PIPELINE.md  FRONTEND.md  PIPELINE_ARCHITECTURE.md  PROJECT_OUTLINE.md  README.md  SIGNALS.md  STRATEGIES.md  SUMMARY.md  database.md  economic.md  events.md  factors.md  frontend.md  fundamentals.md  gpt_challenge.md  gpt_factor_review.md  inference.md  local_hosts.md  news.md  pipelines.md  polymarket.md  quickstart.md  simulations.md  structure.md
frontend/: .env.development  README.md  alpha.html  alpha.js  analysis-gpt.js  analysis.html  analysis.js  app.js  dashboard.css  dashboard.html  dashboard.js  gpt.html  gpt.js  index.html  inference.html  inference.js  package-lock.json  package.json  risk.css  risk.html  risk.js  strats.html  strats.js  styles.css  vite.config.js
planning/: BACKTESTING.md  DATABASE.md  DATA_PIPELINE.md  PERFORMANCE.md  PROJECT_OUTLINE.md  SIMULATOR.md  STRATEGIES.md  STRATEGY.md  SUMMARY.md  WEBGUI.md
scripts/: README.md  add_asset_classes.py  add_diverse_trades.py  backfill_historical_data.py  backfill_historical_yfinance.py  backtest_benchmarks.py  backtest_with_db.py  calculate_real_returns.py  check_all_data.py  check_db_data.py  check_latest_data.py  check_pltr_data.py  check_volume_issue.py  check_volume_millions.py  clear_frontend_cache.py  comprehensive_analysis.py  configurable_analysis.py  create_strategy_tables.sql  cron_backfill.sh  daily_backfill.py  daily_update.py  debug_backtest.py  debug_calc_indicators.py  debug_indicators.py  debug_indicators2.py  example_backtest.py  fill_missing_august.py  fix_assessment_storage.py  fix_return_calculations.py  fix_scenario_dates.py  format_benchmark_results.py  init_db.py  launch_webgui.sh  local_host_proxy.py  migrate_schemas.sql  migrate_simulation.py  monitor_test_runs.sh  optimized_parallel_analysis.py  parallel_comprehensive_analysis.py  populate_assessment_summary.py  (+70 more)
src/: __init__.py  universe.py
tests/: conftest.py  test_benchmark_pipeline.py  test_data_coverage.py  test_data_ingester.py  test_economic_data.py  test_event_data.py  test_full_benchmark_pipeline.py  test_integration_yfinance.py  test_market_data_client.py  test_ml_pipeline.py  test_news_sentiment.py  test_simple_backtest.py  test_simple_momentum_backtest.py  test_strategies.py  test_universe.py
(+337 files in other folders)
