[project]
name = "tetra"
version = "0.1.0"
description = "Tetra Trading Platform - Automated trading system with backtesting and live execution"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    # Database
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    "greenlet==3.2.4",
    # Data clients
    "httpx==0.25.2",
    "tenacity==8.2.3",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "yfinance==0.2.33",
    "pandas-market-calendars==5.1.1",
    # Messaging
    "aiokafka==0.10.0",
    "confluent-kafka==2.3.0",
    # Utilities
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "python-json-logger==2.0.7",
    "redis==5.0.1",
    "aiohttp==3.12.15",
    "pyyaml==6.0.1",
    # Monitoring
    "prometheus-client==0.19.0",
    # Scheduling
    "apscheduler==3.10.4",
    # Machine Learning
    "scikit-learn==1.5.1",
    "joblib==1.4.2",
    "xgboost==2.1.0",
    "lightgbm==4.5.0",
    "catboost==1.2.5",
    "tensorflow==2.16.1",
    "hmmlearn==0.3.2",
    "imbalanced-learn==0.12.3",
    "statsmodels==0.14.2",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "pyarrow>=21.0.0",
]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "factory-boy==3.3.0",
    
    # Development tools
    "black==23.11.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "backend"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
